# ChatIITD-Degree-Planner

./: .gitignore  EE1_courses_data.json  EE_courses.json  constraints.py  convert_to_json.py  courses_left.json  data.json  data.py  data_loader.py  dept.py  package-lock.json  planner.py  pyproject.toml  req.txt  requirements.txt  slotting.py  solver.py  tempCodeRunnerFile.py  test_hf.py  try.py  user.py
HUL_RAG/: rag.py  req.txt
HUL_RAG/data/: HSS Courses Review [Unofficial] (Responses).xlsx  HUL Review form (Responses).xlsx  HUL Review_read only.xlsx  HUL Reviews.xlsx  HUL feedback unofficial.xlsx  HULs Spring 2026.xlsx
api/: main.py
data/: courses.json
frontend/: package-lock.json
frontend/src/: App.css  App.js  api.js
frontend/src/components/: CourseCard.js  DegreeGrid.js  DegreeMatrix.js  SemesterColumn.js
slotting/: Courses_Offered_2025_Sem1.csv  Courses_Offered_2025_Sem2.csv  courses_clean.json  slotparsing.py  tempCodeRunnerFile.py
utils/: extract_gradesheet.py  scrape_ldap.py
