[project]
name = "degree-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.3",
    "asyncio>=4.0.0",
    "beautifulsoup4>=4.14.3",
    "bs4>=0.0.2",
    "lxml>=6.0.2",
    "numpy==2.3.3",
    "ortools==9.14.6206",
    "pandas==2.3.2",
    "pydeps>=3.0.2",
    "requests>=2.32.5",
]
